Remove ImmutableList and ImmutableMap